# lab1-flake-ksy

./: .gitignore  compose.yaml  config.json  pyproject.toml
alembic/: env.py
alembic/versions/: 02adf98f3806_init_tables_pruduct_and_product_group.py  11083680c84e_fix_fk_tables_pruduct_and_product_group.py  1982bc15e86e_add_table_date_operation_schema.py  2c755891a3ef_add_table_facts.py  3e14513f0b79_add_indexes_to_facts.py  656364ae38d4_add_table_localization.py  7ae422df3ebe_add_table_city.py  7bfc7199f965_add_table_customer.py  b1f2b69cfc1e_add_table_localization.py  b4fd7e6d6a6b_init_tables_pruduct_and_product_group.py
imports/: city.csv  city_type.csv  customer.csv  date_operation.csv  facts.csv  localization.csv  product.csv  product_group.csv
src/: config.py  metadata.py
src/schemas/: __init__.py  city.py  customer.py  date.py  facts.py  localization.py  product.py
