[project]
name = "lab1-flake"
version = "0.1.0"
description = "Лабораторная работа по созданию схемы снежинка"
authors = [
    {name = "INovikov Home",email = "nov.ilucha@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic (>=1.16.5,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic-postgresql-enum (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
